--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-allauth
 django-compressor
 django-modeltranslation >=0.15
 django-js-reverse >=0.9.0
-django-sass-processor
+django-sass-processor >=1.2, <1.3
 fdroidserver >=2.0
 html5lib >= 1.1, <1.2
 libsass
